manifests/orders.app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app

---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: app
  labels:
    app: orders
spec:
  selector:
    app: orders
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  namespace: app
  labels:
    app: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: public.ecr.aws/aws-containers/retail-store-sample-orders:1.3.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 30
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 30
            failureThreshold: 3
